force-app/main/default/objects/PricebookEntry/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <label>Precio de la lista financiado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>