force-app/main/default/objects/PricebookEntry/fields/Precio_metro_cuadrado_financiado__c.field-meta.xml
<CustomField>
    <fullName>Precio_metro_cuadrado_financiado__c</fullName>
    <label>Precio metro cuadrado financiado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>